--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 :root {
   --bg-col: #30404c;
-  --ff-col: #0ccb95;
+  --ff-col: #93d7dd;
   --title-ff: "Bowlby One SC", cursive;
   --ff: "Roboto Mono", monospace;
+  --ff-size: 0.8rem;
 }
-
 html,
 body {
   background-color: var(--bg-col);
@@ -56,7 +56,7 @@ li {
   margin-top: 40px;
   font-family: var(--ff);
   color: var(--ff-col);
-  font-size: 0.8rem;
+  font-size: var(--ff-size);
   z-index: 1;
 }
 .projects > h2 {
@@ -64,7 +64,7 @@ li {
   margin-bottom: 5px;
 }
 .projects li {
-  font-size: 0.8rem;
+  font-size: var(--ff-size);
 }
 .contacts-wrapper {
   position: fixed;
@@ -77,6 +77,7 @@ li {
 .contacts-wrapper > a {
   margin-left: 20px;
   margin-top: -2px;
+  font-size: var(--ff-size);
 }
 .contacts-wrapper > a:nth-child(2) {
   margin-left: 10px;
