--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
   --bg-col: #30404c;
-  --ff-col: #93d7dd;
+  --ff-col: #0ccb95;
   --title-ff: "Bowlby One SC", cursive;
   --ff: "Roboto Mono", monospace;
   --ff-size: 0.8rem;
